--- a/home/index.css
+++ b/home/index.css
@@ -101,7 +101,7 @@
     border-radius: 15px;
     overflow: hidden;
     padding: 0 0;
-    background-image: url('preview.png');
+    background-image: url('https://github.com/juddcraft12/RHS-SWCR/blob/main/home/preview.png');
     background-size: 90px auto;
     background-repeat: repeat;
     opacity: 0.4;
