--- a/home/index.css
+++ b/home/index.css
@@ -33,6 +33,198 @@
     font-size: 0.7em;
     background-color: #3c494f;
     color: #f9f9f9;
+    @import url('https://fonts.googleapis.com/css?family=Montserrat:500&display=swap');
+
+html {
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
+
+body {
+    text-align: center;
+    cursor: default;
+    font-family: 'Montserrat', sans-serif;
+    background-image:url('https://github.com/juddcraft12/RHS-SWCR/blob/main/bg.gif');
+}
+body * {
+    outline: none
+}
+h {
+    font-size: 3em;
+}
+button, input, textarea {
+    border: 1px outset black;
+    border-radius:0px
+}
+button {
+    cursor: pointer;
+    user-select: none;
+}
+input {
+    cursor: text;
+    border-radius: 5px;
+}
+input[type="search"]::-webkit-search-cancel-button {
+    /* Remove default */
+    -webkit-appearance: none;
+    /* Now your own custom styles */
+    height: 14px;
+    width: 14px;
+    display: block;
+    background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAAn0lEQVR42u3UMQrDMBBEUZ9WfQqDmm22EaTyjRMHAlM5K+Y7lb0wnUZPIKHlnutOa+25Z4D++MRBX98MD1V/trSppLKHqj9TTBWKcoUqffbUcbBBEhTjBOV4ja4l4OIAZThEOV6jHO8ARXD+gPPvKMABinGOrnu6gTNUawrcQKNCAQ7QeTxORzle3+sDfjJpPCqhJh7GixZq4rHcc9l5A9qZ+WeBhgEuAAAAAElFTkSuQmCC);
+    /* setup all the background tweaks for our custom icon */
+    background-repeat: no-repeat;
+    /* icon size */
+    background-size: 14px;
+}
+textarea {
+    cursor: default;
+    padding: 0 0;
+    margin: 0;
+}
+
+.hide {
+    display: none;
+    opacity: 0;
+    user-select: none;
+}
+.showFlex {
+    display: flex;
+}
+
+#navBar {
+    width: 100vw;
+    height: 80px;
+    background: rgba(39, 39, 39, 0.8);
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 99999;
+    display: flex;
+    transition: all 0.3s;
+}
+#navBar:hover {
+    background: rgba(39, 39, 39, 1);
+}
+
+#search {
+    flex: 5 5;
+    margin-top: 16px;
+    margin-bottom: 16px;
+    margin-left: 5%;
+    padding: 0.5em 1em;
+    font-size: 1.2em;
+    max-width: 70%;
+    border-radius: 5px;
+    transition: all 0.25s;
+}
+#search:focus {
+  box-shadow: 0 0 5px rgba(81, 203, 238, 1);
+  padding: 3px 0px 3px 3px;
+  margin: 5px 1px 3px 0px;
+  border: 1px solid rgba(81, 203, 238, 1);
+}
+#search:focus {
+    width: 200%;
+    margin-left: 10%;
+    margin-top: 4px;
+    margin-bottom: 4px;
+    transform: scaleX(1.1);
+}
+#search:focus + #refresh {
+    transform: translateX(120%);
+}
+#refresh {
+    flex: 1 1;
+    float: right;
+    font-size: 4em;
+    margin-top: 5px;
+    color: white;
+    text-shadow: 0 0 5px black;
+    cursor: pointer;
+    transition: all 0.1s;
+    margin-right: 10px;
+}
+#refresh:hover {
+    text-shadow: 0 0 6px black;
+    transform: translateY(-2%);
+}
+#homeBtn {
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+    background: white;
+    border: 2px solid black;
+    border-radius: 10px;
+    padding: 0.5em;
+    cursor: pointer;
+    transition: all 0.2s;
+    margin-top: 8px;
+    margin-bottom: 8px;
+}
+#homeBtn:hover {
+    transform: translateY(-2%);
+    box-shadow: 10px 10px 20px 10px rgba(0,0,0,0.1);
+}
+@media only screen and (max-width: 780px) {
+    select, textarea, input {
+        font-size: 16px;
+        background: #eee;
+    }
+    #navBar {
+        height: 50px;
+    }
+    #refresh {
+        font-size: 2em
+    }
+    #search {
+        font-size: 0.9em;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+    #search:focus {
+        margin-top: 1px;
+        margin-bottom: 1px;
+        margin-left: 12%;
+        transform: scaleX(1.1);
+    }
+    #homeBtn {
+        font-size: 0.6em;
+        margin-top: 3px;
+        margin-bottom: 3px;
+    }
+}
+
+/* /scrollbar */
+#container {
+    width: 100%;
+    position: fixed;
+    margin: 0 0;
+    bottom: 0;
+    left: 0;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    scroll-behavior: smooth;
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 15px;
+}
+/* Track */
+::-webkit-scrollbar-track {
+    border: solid 0.5px rgba(124, 124, 124, 0.3);
+}
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: rgba(134, 134, 134, 0.4);
+}
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: rgba(134, 134, 134, 0.5);
+}
+/* /scrollbar */
+
     margin-top: 10px;
 }
 
